# aws-lambda-cpp-sam

./: .env  .gitignore  CONTRIBUTING.md  LICENSE  Readme.md  docker-compose.yml
cpp-lambda/: Dockerfile
cpp-lambda/examples/api-gateway/: CMakeLists.txt  README.md  main.cpp
cpp-lambda/examples/demo/: CMakeLists.txt  main.cpp
cpp-lambda/examples/dynamodb/: CMakeLists.txt  README.md  main.cpp
cpp-lambda/examples/hello/: CMakeLists.txt  main.cpp
cpp-lambda/examples/s3/: CMakeLists.txt  Readme.md  main.cpp
cpp-lambda/tests/lambda-runtime-tests/: CMakeLists.txt  Dockerfile  Readme.md  runtime_tests.cpp
cpp-lambda/tests/lambda-runtime-tests/resources/: CMakeLists.txt
cpp-lambda/tests/resources/: CMakeLists.txt  Dockerfile  Readme.md  lambda_function.cpp  lambda_function.h  lambda_function_test.cpp  main.cpp  run_all_tests.sh
cpp-lambda/tests/simple_unit_test/: CMakeLists.txt  Dockerfile  main.cpp  sample.h
cpp-lambda/tests/simple_unit_test/test/: sample_test.cpp
lambda-deployment/: Dockerfile  entrypoint.sh
lambda-deployment/src/: app.py
lambda-deployment/src/lambda_deploy/: lambda_deploy_stack.py
lambda-emulator/: Dockerfile  entrypoint.sh
unit-tests/: Dockerfile
unit-tests/api-gateway/: CMakeLists.txt  test_lambda.cpp
unit-tests/payload/: invalid_json.json  missing_body_field.json  missing_fields.json  valid_input.json
